@@ -1,3 +1,12 @@
+2001-06-13  Pavel Roskin  <proski@gnu.org>
+
+	* gnome-fileutils.m4: Always explicitly declare main() with the
+	return type `int'. Don't use exit() since it may be undeclared.
+	Use `return' instead.
+	* gnome-pilot.m4: Likewise.
+	* gperf-check.m4: Likewise.
+	* linger.m4: Likewise.
+
 2001-06-01  Peter Williams  <peterw@ximian.com>
 
 	* autogen.sh: s,Gnome,$PKG_NAME,g
